public interface Observer{
    void update(SystemUser winner, double stake);
}
